Add more examples; add watch window

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,7 +11,12 @@ include_directories(${LLVM_INCLUDE_DIRS})
 include_directories(${CLANG_INCLUDE_DIRS})
 add_definitions(${LLVM_DEFINITIONS})
 
-add_executable(PythonClassGenerator PythonClassGenerator.cpp)
+add_executable(PythonClassGenerator main.cpp)
+set(CMAKE_BUILD_TYPE Debug)
+add_executable(example1 examples/ex1/example.cpp)
+add_executable(example2 examples/ex2/example.cpp)
+add_executable(example3 examples/ex3/example.cpp)
+add_executable(example4 examples/ex4/example.cpp)
 
 llvm_map_components_to_libnames(llvm_libs support)
 
